# njajal-rust

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml
migrations/: 20240817171013_create-user.down.sql  20240817171013_create-user.up.sql
src/: main.rs
src/app/: mod.rs
src/app/middleware/: mod.rs  verify_token.rs
src/app/response/: error.rs  success.rs
src/app/state/: mod.rs  token_state.rs  user_state.rs
src/app/usecase/: user_usecase.rs
src/domain/entities/: mod.rs  user_entities.rs
src/infrastructure/: mod.rs
src/infrastructure/db/: postgres.rs
src/infrastructure/repositories/: mod.rs  user_repositories.rs
src/presentation/: mod.rs
src/presentation/dto/: mod.rs  token.rs  upload_dto.rs  user_dto.rs
src/presentation/handler/: mod.rs  upload_handler.rs  user_handler.rs
src/presentation/routes/: mod.rs  root_routes.rs  upload_routes.rs  user_routes.rs
