[package]
name = "njajal-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
serde = {version = "1.0.207", features = ["derive"]}
serde_derive = "1.0"
serde_json = "1.0.124"
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = {version ="0.3.18", features = ["env-filter"] }
validator = {version = "0.18.1", features = ["derive"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "time", "chrono" ] }
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
tower = { version = "0.5.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["full"] }
thiserror = "1.0.63"

